--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb1.jpg" alt=""/>
-                    <span>30:14</span>
+                    <span class="minit">30:14</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
@@ -144,7 +144,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb2.jpg" alt=""/>
-                    <span>5:10</span>
+                    <span class="minit">5:10</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
@@ -163,7 +163,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb3.jpg" alt=""/>
-                    <span>2:23:22</span>
+                    <span class="minit">2:23:22</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
@@ -182,7 +182,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb4.jpg" alt=""/>
-                    <span>1:03:00</span>
+                    <span class="minit">1:03:00</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
@@ -201,7 +201,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb5.jpg" alt=""/>
-                    <span>1:02:06</span>
+                    <span class="minit">1:02:06</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
@@ -220,7 +220,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb6.jpg" alt=""/>
-                    <span>50:23</span>
+                    <span class="minit">50:23</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
@@ -239,7 +239,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb7.jpg" alt=""/>
-                    <span>1:30:28</span>
+                    <span class="minit">1:30:28</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
@@ -258,7 +258,7 @@
             <div class="video">
                 <div class="thumbnail">
                     <img src="images/thumb8.jpg" alt=""/>
-                    <span>1:00:02</span>
+                    <span class="minit">1:00:02</span>
                 </div>
                 <div class="video-info">
                     <div class="user">
